# landing_page

./: .dockerignore  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  manage.py  pyproject.toml  requirements.txt  urls.py  views.py
.github/ISSUE_TEMPLATE/: feature_request.md
API 스펙문서/가계부 항목 생성(Create)/: Request(Json).Json  Response(201 Created).Json
API 스펙문서/가계부 항목 수정(Update)/: Request(Json).Json  Response(200 OK).Json
API 스펙문서/가계부 항목 조회(Read)/: Response_단일조회(200 OK).Json  Response_목록조회(200 OK).Json
API 스펙문서/로그아웃(Logout)/: Response(200 OK).Json
API 스펙문서/사용자 API/로그인(Login)/: Request(Json).Json  Response(200 OK).Json
API 스펙문서/사용자 API/사용자 삭제(User Delete)/: Response (204 No Content)
API 스펙문서/사용자 API/사용자 정보 수정/: Request(Json).Json  Response(200 OK).Json
API 스펙문서/사용자 API/사용자 정보 조회(User Profile)/: Response(200 OK).Json
API 스펙문서/사용자 API/토큰 재발급(Token Refresh)/: Request(Json).Json  Response(200 OK).Json
API 스펙문서/사용자 API/회원가입(Sign Up)/: Request(Json).Json  (+1 more)
accounts/: models.py
apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/analysis/: admin.py  apps.py  models.py  serializers.py  task.py  tasks.py  urls.py  views.py
apps/categories/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/notification/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/notifications/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/transactions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
categories/: models.py
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
scripts/: run.sh
tests/: test_api.py  test_integration.py
transactions/: models.py
users/: models.py
